[LEVC-110] added in residence form status field, fix visible select field

--- a/src/app/components/residence-form/ResidenceForm.scss
+++ b/src/app/components/residence-form/ResidenceForm.scss
@@ -7,14 +7,14 @@ $widthForTwoBlocksPerLine: calc(50% - 20px);
         width: $widthForTwoBlocksPerLine;
 
         &__buttons {
-            margin-top: 25px;
+            margin: 25px 0 0 auto;
 
             > button {
                 max-width: 150px;
                 width: $widthForTwoBlocksPerLine;
 
                 &:first-child {
-                    margin-right: 10px;
+                    margin-left: 10px;
                 }
             }
         }
