--- a/src/app/screens/settings/Settings.scss
+++ b/src/app/screens/settings/Settings.scss
@@ -57,5 +57,27 @@
 @media (max-width: 1450px) {
     .settings-container {
         grid-template-columns: repeat(2, 1fr);
+
+        .settings-block {
+            width: calc(100% - 10px);
+
+            &:nth-child(odd) {
+                margin: 0 auto 30px 0;
+            }
+            &:nth-child(even) {
+                margin: 0 0 30px auto;
+            }
+        }
+    }
+}
+
+@media (max-width: 1024px) {
+    .settings-container {
+        grid-template-columns: repeat(1, 1fr);
+
+        .settings-block {
+            margin: 0 0 30px 0;
+            width: 100%;
+        }
     }
 }
